<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true"
    card_view:elevation="@dimen/margin_tiny">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:maxLines="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:layout_gravity="start"
                android:text="@string/author"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_size_small"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/tv_published_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_gravity="end"
                android:text="@string/date"
                android:textAlignment="textEnd"
                android:textStyle="italic"
                android:textSize="@dimen/text_size_small"
                android:maxLines="1"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:scaleType="centerCrop"
            android:visibility="visible"
            android:contentDescription="@string/conten_description"
            tools:src="@drawable/news_content" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:maxLines="4"
            android:text="@string/content"
            android:textSize="@dimen/text_size_tiny"/>

    </LinearLayout>

</android.support.v7.widget.CardView>



